chore: Update default ports - frontend to 8777, Reverb to 8776

--- a/.env.docker
+++ b/.env.docker
@@ -5,8 +5,8 @@ APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
-APP_PORT=80
+APP_URL=http://localhost:8777
+APP_PORT=8777
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -55,7 +55,7 @@ REVERB_APP_ID=geezap
 REVERB_APP_KEY=your-app-key
 REVERB_APP_SECRET=your-app-secret
 REVERB_HOST=reverb
-REVERB_PORT=8080
+REVERB_PORT=8776
 REVERB_SCHEME=http
 
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
