fix: Change default external ports for Redis (6380) and MySQL (3307) to avoid conflicts

--- a/.env.docker
+++ b/.env.docker
@@ -45,10 +45,10 @@ QUEUE_CONNECTION=redis
 CACHE_STORE=redis
 CACHE_PREFIX=
 
-# Redis
+# Redis (external port for host access)
 REDIS_HOST=redis
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=6380
 
 # Reverb WebSockets
 REVERB_APP_ID=geezap
