fix: Mount nginx config directory instead of individual file for Portainer compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,9 +59,7 @@ services:
       - "${APP_PORT:-8777}:80"
     volumes:
       - ./:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./storage/app/public:/var/www/html/storage/app/public
-      - ./public:/var/www/html/public
+      - ./docker/nginx:/etc/nginx/conf.d:ro
     networks:
       - geezap-network
     depends_on:
