--- a/.env.example
+++ b/.env.example
@@ -123,8 +123,8 @@ SENTRY_TRACES_SAMPLE_RATE=
 
 CLOUDFLARE_TURNSTILE_SITE_KEY=
 CLOUDFLARE_TURNSTILE_SECRET_KEY=
-DATABASE_BACKUP_MAIL_TO_ADDRESS= spatie backup notification send mail.
-DISCORD_WEBHOOK_URL= spatie discord notification
+DATABASE_BACKUP_MAIL_TO_ADDRESS=
+DISCORD_WEBHOOK_URL=
 
 # Google Indexing API
 GOOGLE_INDEXING_ENABLED=false
