--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       args:
         - APP_ENV=production
         - APP_URL=${APP_URL:-http://localhost:8777}
+        - VITE_REVERB_HOST=${VITE_REVERB_HOST:-192.168.7.10}
+        - VITE_REVERB_PORT=${VITE_REVERB_PORT:-8776}
+        - VITE_REVERB_SCHEME=${VITE_REVERB_SCHEME:-http}
     container_name: geezap-app
     restart: unless-stopped
     working_dir: /var/www/html
